--- a/sass/layout/_dialog.scss
+++ b/sass/layout/_dialog.scss
@@ -1,7 +1,5 @@
 .soModalDefaultModal {
-    overflow: hidden;
     min-width: 320px;
-    @include border-radius($modal-border-radius);
     background-color: transparent;
     @include box-shadow(0 15px 20px rgba(0, 0, 0, 0.22), 0 19px 60px rgba(0, 0, 0, 0.3));
 
@@ -9,6 +7,8 @@
         padding: 10px;
         background: $modal-header-bg;
         color: $modal-header-color;
+        overflow: hidden;
+        @include border-top-radius($modal-border-radius);
 
         h3 {
             text-align: center;
@@ -47,6 +47,8 @@
     }
 
     .modalFooter {
+        @include border-bottom-radius($modal-border-radius);
+        overflow: hidden;
         background: $modal-footer-bg;
         color: $modal-footer-color;
         text-align: right;
